using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RUN = "Run";
    public const string ANIM_DEAD = "Die";
    public const string ANIM_JUMP = "Jump";
    public const string ANIM_FALL = "Fall";
    public const string ANIM_CROUCH = "Ducking";
    public const string ANIM_LOOKUP = "LookUp";



    public const string PLAYER_TAG = "Player";
}
